huaewi image not visible fixed

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -2,7 +2,8 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 10vh;
+    min-height: 8vh;
+    height: 100%;
     width: 100%;
     background-color: #2a1b3d;
     filter: saturate(.5);
@@ -28,6 +29,7 @@ footer{
 }
 .innerContainer > p{
     font-size: .9rem;
+    margin: 0;
 
 }
 @media screen and (max-width: 740px) {
