--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -507,6 +507,7 @@
 
 }
 .contactContainer > img{
+    width: 100%;
     position: absolute;
     height: inherit;
     object-fit: cover;
