--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
 
 
 body {
+    position: relative;
     background-color: #f3f3f3!important;
     width: 100%;
     height: 100%;
@@ -31,7 +32,10 @@ button:focus{
     
  
 body {
-    position: absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
     width: 100%;
     height: 100%;
     min-height: 100vh;
